--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -30,5 +30,5 @@ layout: default
 
 <div class="button-next-project">
 	<a href="{{ page.next_project }}.html">Next project<span></span></a>
-	<img src="/assets/images/logo.svg" alt="Logo Julia Popko" />
+	<img src="logo.svg" alt="Logo Julia Popko" />
 </div>
