--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ layout: default
 <main>
 	<div class="cover-about">
 		<div class="picture">
-			<img src="/assets/images/{{page.picture}}" alt="{{page.alt_picture}}" />
+			<img src="{{page.picture}}" alt="{{page.alt_picture}}" />
 		</div>
 
 		<div class="title">
@@ -48,7 +48,7 @@ layout: default
 				</div>
 			</div>
 
-			<a href="/assets/images/{{page.cv_link}}" class="cv_link" target="_blank">PDF
+			<a href="{{page.cv_link}}" class="cv_link" target="_blank">PDF
 				Version<span></span></a>
 		</div>
 
@@ -100,7 +100,7 @@ layout: default
 				</div>
 			</div>
 
-			<a href="/assets/images/{{page.cv_link}}" class="cv_link" target="_blank">PDF
+			<a href="{{page.cv_link}}" class="cv_link" target="_blank">PDF
 				Version<span></span></a>
 		</div>
 	</div>
