--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="cover-home">
 	<div class="title">
-		<img src="logo.svg" alt="{{ page.logo_alt }}" />
+		<!-- <img src="logo.svg" alt="{{ page.logo_alt }}" /> -->
 		<h1>{{ site.title }}</h1>
 		<div class="type-wrap">
 			<div id="typed-strings">
@@ -18,7 +18,7 @@ layout: default
     
     <div class="intro">
         {{ page.intro | markdownify }}
-        <img src="logo.svg" alt="Arrow down" class="arrow-logo">
+        <img src="/assets/images/logo.svg" alt="Arrow down" class="arrow-logo">
     </div>
 </div>
 
