--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,5 @@
 	<ul>
 		{% include social.html %}
 	</ul>
-	<p>Designed by Camille, coded by <a href="https://www.julien-sebag.fr" target="_blank">Julien</a></p>
+	<p>Coded by <a href="https://www.julien-sebag.fr" target="_blank">Julien</a></p>
 </footer>
