--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -16,9 +16,11 @@ layout: default
 	</div>
 </div>
 
-{{ content }}
 
-{% if page.link_to_medium %}
+
+<!-- {{ content }} -->
+
+<!-- {% if page.link_to_medium %}
 <p class="link-full-project">
 	<a href="{{ page.link_to_medium }}" target="_blank">See the full project on Medium<span></span></a>
 </p>
@@ -26,9 +28,9 @@ layout: default
 <p class="link-full-project">
 	<a href="{{ page.link_to_behance }}" class="link-full-project" target="_blank">See the full project on Behance<span></span></a>
 </p>
-{% endif %}
+{% endif %} -->
 
 <div class="button-next-project">
 	<a href="{{ page.next_project }}.html">Next project<span></span></a>
-	<img src="logo.svg" alt="Logo Julia Popko" />
+	<img src="/assets/images/logo.svg" alt="Logo Julia Popko" />
 </div>
