--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -28,10 +28,13 @@ layout: default
 		</ul>
 	</div>
 </section>
-
-
 {% else %}
-
+<section class="projects-container bg-{{ section.background }}">
+	<div class="container">
+		<h3>{{ section.title }}</h3>
+		{{ section.content | markdownify }}
+	</div>
+</section>
 {% endif %}
 {% endfor %}
 
