--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -10,6 +10,8 @@
           bottom: 0;
      }
      @include flexbox(center, center, wrap);
+     position: fixed;
+     z-index: 0;
 
      .title {
           width: 100%;
