--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 
-<div class="cover-home">
+<div class="cover-home" style="background: url(/assets/images/{{page.cover}});">
 	<div class="title">
-		<!-- <img src="logo.svg" alt="{{ page.logo_alt }}" /> -->
 		<h1>{{ site.title }}</h1>
 		<div class="type-wrap">
 			<div id="typed-strings">
@@ -22,7 +21,7 @@ layout: default
     </div>
 </div>
 
-<div class="container">
+<div class="container container-home">
     {% assign projects = site.projects | sort: "order" %}
     {% for project in projects %}
     <div class="project-list">
