--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,22 @@
           <script src="/assets/js/js-head.js"></script>
      </head>
 
-     <body {% if page.title =="About" %}id="about" {% elsif page.layout == "projects" %}id="projects" {% endif %}>
+     <body {% if page.title =="About" %}id="about" {% elsif page.layout == "projects" %}id="projects"
+          {% elsif page.layout == "home" %}id="home" {% endif %}>
           {% include header.html %}
           {{content}}
           {% include footer.html %}
 
           <script src="/assets/js/script.js"></script>
+          <script>
+               window.onscroll = function () {
+                    var nav = document.getElementById('nav');
+                    if (window.pageYOffset > 500) {
+                         nav.classList.add("nav-background");
+                    } else {
+                         nav.classList.remove("nav-background");
+                    }
+               }
+          </script>
      </body>
 </html>
