--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,167 +1,157 @@
 /*=============================================== Homepage ===============================================*/
 
-.cover-home {
-     width: 100%;
-     min-height: 100vh;
-     float: left;
-     padding: 5%;
-     padding: {
-          top: 5vh;
-          bottom: 0;
-     }
-     @include flexbox(center, center, wrap);
-     position: fixed;
-     z-index: 0;
+#home {
+	header {
+		a {
+			color: $white;
 
-     .title {
-          width: 100%;
-          text-align: center;
+			span {
+				background-color: $white;
+			}
+		}
+	}
 
-          img {
-               width: 15%;
-               max-width: 500px;
-          }
+	.cover {
+		width: 100%;
+		height: 100vh;
+		float: left;
+		position: relative;
+		color: $white;
+		@include flexbox(center, flex-start, nowrap);
 
-          h1 {
-               width: 100%;
-               float: left;
-               margin: 0 {
-                    top: 20px;
-                    bottom: 20px;
+		.cover-bg {
+			position: fixed;
+			top: 0;
+			left: 0;
+			@extend %bgCenter;
+			float: left;
+			width: 100%;
+			height: 100vh;
+			z-index: 0;
+		}
+
+		.content {
+			position: relative;
+			z-index: 1;
+			@include flexbox(center, center, nowrap);
+			flex-direction: column;
+			width: 100%;
+			height: 100%;
+
+			.title {
+				margin-bottom: 100px;
+				width: 100%;
+				@include flexbox(center, center, wrap);
+
+				h1 {
+					width: 100%;
+					text-align: center;
+					font-size: 75px;
+				}
+
+				#typed {
+					font-size: 35px;
+				}
+
+				h1,
+				span,
+				#typed {
+					color: $white;
+				}
+			}
+
+			.intro {
+				position: absolute;
+				bottom: 20px;
+				left: 0;
+				text-align: center;
+				@include flexbox(center, center, nowrap);
+				flex-direction: column;
+				width: 100%;
+
+				i {
+					margin-top: 30px;
+				}
+			}
+		}
+	}
+
+	.container-home {
+		width: 100%;
+		float: left;
+		background-color: $white;
+		position: relative;
+		z-index: 1;
+		padding: 100px 5%;
+
+		.project-list {
+			width: 100%;
+			float: left;
+               height: 70vh;
+               min-height: 400px;
+               margin-bottom: 100px;
+
+			a {
+				@include flexbox(center, flex-start, nowrap);
+				width: 100%;
+				height: 100%;
+                    float: left;
+                    text-decoration: none;
+                    position: relative;
+
+				.cover-project-home {
+					width: 60%;
+					height: 100%;
+					float: left;
+                         @extend %bgCenter;
+                    }
+
+                    .purple-bg {
+                         height: 100%;
+                         background-color: $black;
+                         width: 60%;
+                         position: absolute;
+                         top: 0;
+                         opacity: .5;
+                         @include transition(all, .5s, ease);
+                    }
+                    
+                    p {
+                         width: 40%;
+                         @extend %montserrat-bold;
+                         color: $black;
+                         font-size: $font-footer;
+                         text-transform: uppercase;
+                    }
+
+                    &:hover .purple-bg {
+                         opacity: 0;
+                    }
+			}
+
+			&:nth-child(odd) {
+				a {
+                         flex-direction: row;
+                         
+                         p {
+                              padding-left: 10px;
+                         }
+				}
+			}
+
+			&:nth-child(even) {
+				a {
+                         flex-direction: row-reverse;
+
+                         p {
+                              padding-right: 10px;
+                         }
+				}
                }
-          }
-     }
-
-     .intro {
-          width: 100%;
-          text-align: center;
-          position: relative;
-
-          img {
-               height: 30px;
-               @include transform(rotate(180deg));
-               margin-top: 35px;
-          }
-
-          p {
-               font-size: $font-intro;
-          }
-     }
-}
-
-// .list-projects {
-//      @extend %ulNone;
-//      width: 100%;
-//      float: left;
-
-//      li {
-//           width: 100%;
-//           height: 50vh;
-//           max-height: 500px;
-//           position: relative;
-//           @extend %bgCenter;
-//           background-repeat: no-repeat;
-          
-//           a {
-//                display: block;
-//                position: relative;
-//                width: 100%;
-//                height: 100%;
-
-//                .purple-bg, p {
-//                     width: 100%;
-//                     height: 100%;
-//                     position: absolute;
-//                     top: 0;
-//                     left: 0;
-//                }
-
-//                .purple-bg {
-//                     background: $purple;
-//                     opacity: 0.5;
-//                     @include transition(all, .5s, ease);
-//                }
-
-//                p {
-//                     @include flexbox(center, center, nowrap);
-//                }
-
-//                &:hover .purple-bg {
-//                     opacity: 0.2;
-//                }
-//           }          
-//      }
-// }
-
-
-.project-list {
-     width: 100%;
-     float: left;
-     position: relative;
-     height: 80vh;
-
-     .cover-project-home {
-          width: 60%;
-          float: left;
-          @extend %bgCenter;
-          height: 70vh;
-          position: absolute;
-          top: 0;
-          left: 0;
-     }
-
-     &:nth-child(odd) {
-          .cover-project-home {
-               float: right;
-               left: auto;
-               right: 0;
-          }
-
-          .purple-bg {
-               left: auto;
-               right: 0;
-          }
-     }
-     
-     a {
-          color: $black;
-          text-decoration: none;
-          text-transform: uppercase;
-
-          p {
-               font-size: $font-footer;
-               @extend %montserrat-bold;
-               display: flex;
-               align-items: center;
-               height: 100%;
-               position: relative;
-               z-index: 2;
-               width: 40%;
-               float: left;
-               padding-right: 10px;
-          }
-     }
-
-     &:nth-child(even) {
-          a p {
-               float: right;
-               padding-left: 10px;
-               padding-right: 0;
-          }
-     }
-
-     .purple-bg {
-          width: 60%;
-          height: 70vh;
-          position: absolute;
-          top: 0;
-          left: 0;
-          background-color: $black;
-          opacity: .5;
-          @include transition(all, .2s, ease);
-     }
-
-     &:hover .purple-bg {
-          opacity: .2;
-     }
+               
+               &:last-child {
+                    margin-bottom: 0;
+               }
+		}
+	}
 }
