--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -8,6 +8,16 @@ header {
     left: 0;
     padding: 30px 5%;
     z-index: 9999;
+    @include transition(all, .5s, ease);
+    background-color: $transparent;
+
+    &.nav-background {
+        background-color: $bg-header;
+        
+        nav a {
+            color: $white;
+        }
+    }
 
     nav {
         width: 100%;
