--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -25,6 +25,10 @@ body {
 	@extend %montserrat;
 }
 
+img {
+	max-width: 100%;
+}
+
 /*=============================================== Components ===============================================*/
 
 @import "navigation";
