--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -32,25 +32,14 @@ layout: default
 <section class="projects-container bg-{{ section.background }}">
 	<div class="container">
 		<h3>{{ section.title }}</h3>
-		{{ section.content | markdownify }}
+		<div class="content">
+			{{ section.content | markdownify }}
+		</div>
 	</div>
 </section>
 {% endif %}
 {% endfor %}
 
-<!-- {{ content }} -->
-
-<!-- {% if page.link_to_medium %}
-<p class="link-full-project">
-	<a href="{{ page.link_to_medium }}" target="_blank">See the full project on Medium<span></span></a>
-</p>
-{% endif %} {% if page.link_to_behance %}
-<p class="link-full-project">
-	<a href="{{ page.link_to_behance }}" class="link-full-project" target="_blank">See the full project on Behance<span></span></a>
-</p>
-{% endif %} -->
-
 <div class="button-next-project">
-	<a href="{{ page.next_project }}.html">Next project<span></span></a>
-	<img src="/assets/images/logo.svg" alt="Logo Julia Popko" />
+	<a href="{{ page.next_project }}.html">Next project<span></span></a> <i class="fas fa-arrow-right"></i>
 </div>
