--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -1,2 +1,89 @@
 /*=============================================== Projects ===============================================*/
 
+#projects {
+     .cover-project {
+          width: 100%;
+          height: 70vh;
+          float: left;
+          @include flexbox(center, center, nowrap);
+          text-align: center;
+     }
+
+     section {
+          width: 100%;
+          float: left;
+
+          .container {
+               @include flexbox(center, center, nowrap);
+               flex-direction: column;
+
+               h3 {
+                    margin-bottom: 20px;
+               }
+
+               .list-screens {
+                    @extend %ulNone;
+                    @include flexbox(center, center, nowrap);
+
+                    li {
+                         margin-right: 50px;
+                         width: 100%;
+
+                         &:last-child {
+                              margin-right: 0;
+                         }
+
+                         img {
+                              width: 100%;
+                         }
+                    }
+
+                    /* Extra small devices (phones, 600px and down) */
+                    @media only screen and (max-width: 600px) {
+                         flex-wrap: wrap;
+
+                         li {
+                              margin-right: 0;
+                         }
+                    }
+               }
+          }
+     }
+
+     .button-next-project {
+          width: 100%;
+          text-align: center;
+          float: left;
+          margin: 100px 0;
+          @include flexbox(center, center, nowrap);
+
+          a {
+               color: $black;
+               text-decoration: none;
+               font-size: 22px;
+               position: relative;
+               margin-right: 10px;
+               @extend %montserrat-bold;
+
+               span {
+                    position: absolute;
+                    bottom: -2px;
+                    width: 0;
+                    height: 2px;
+                    left: 50%;
+                    right: 50%;
+                    background-color: $black;
+                    float: left;
+                    @include transition(all, .3s, ease);
+               }
+
+               &:hover {
+                    span {
+                         width: 100%;
+                         left: 0;
+                         right: 0;
+                    }
+               }
+          }
+     }
+}
