--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,1 +1,87 @@
 /*=============================================== About ===============================================*/
+
+#about {
+     .cover-about {
+          width: 100%;
+          float: left;
+          height: 70vh;
+          @include flexbox(center, flex-start, nowrap);
+
+          .picture {
+               width: 40%;
+               @include flexbox(center, center, nowrap);
+
+               img {
+                    width: 70%;
+               }
+          }
+
+          .title {
+               width: 60%;
+
+               p {
+                    font-size: 16px;
+               }
+          }
+     }
+
+     .row {
+          margin-top: 100px;
+
+          h3 {
+               margin-bottom: 20px;
+          }
+
+          ul {
+               @extend %ulNone;
+               margin-bottom: 40px;
+
+               li {
+                    margin-bottom: 20px;
+
+                    &:last-child {
+                         margin-bottom: 0;
+                    }
+
+                    .date, .subtitle {
+                         color: $light-gray;
+                    }
+
+                    .title {
+                         @extend %montserrat-bold;
+                         font-size: 22px;
+                    }
+
+                    .skills, .description {
+                         @extend %montserrat-italic;
+                    }
+               }
+          }
+     }
+
+     .cv_link {
+          color: $black;
+          text-decoration: none;
+          @extend %montserrat-bold;
+          font-size: 22px;
+          position: relative;
+
+          span {
+               position: absolute;
+               bottom: -2px;
+               width: 0;
+               left: 50%;
+               right: 50%;
+               float: left;
+               height: 2px;
+               background-color: $black;
+               @include transition(all, .3s, ease);
+          }
+
+          &:hover span {
+               width: 100%;
+               left: 0;
+               right: 0;
+          }
+     }
+}
