--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -28,7 +28,7 @@ layout: default
 				{% endfor %}
 			</ul>
 
-			<div class="row">
+			<div class="row row-2-cols">
 				<div class="col-6-12">
 					<h3>Languages</h3>
 					<ul class="list-languages">
@@ -48,7 +48,7 @@ layout: default
 				</div>
 			</div>
 
-			<a href="{{page.cv_link}}" class="cv_link" target="_blank">PDF
+			<a href="/assets/images/{{page.cv_link}}" class="cv_link" target="_blank">PDF
 				Version<span></span></a>
 		</div>
 
@@ -67,7 +67,7 @@ layout: default
 			</ul>
 		</div>
 
-		<!-- <div class="col-6-12 col-padding-left col-mobile">
+		<div class="col-6-12 col-padding-left col-mobile">
 			<h3>Education</h3>
 			<ul class="list-education">
 				{% for education in page.educations %}
@@ -80,7 +80,7 @@ layout: default
 				{% endfor %}
 			</ul>
 
-			<div class="row">
+			<div class="row row-2-cols">
 				<div class="col-6-12">
 					<h3>Languages</h3>
 					<ul class="list-languages">
@@ -100,8 +100,8 @@ layout: default
 				</div>
 			</div>
 
-			<a href="{{page.cv_link}}" class="cv_link" target="_blank">PDF
+			<a href="/assets/images/{{page.cv_link}}" class="cv_link" target="_blank">PDF
 				Version<span></span></a>
-		</div> -->
+		</div>
 	</div>
 </main>
