--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -23,7 +23,14 @@ layout: default
 		<h3>{{ section.title }}</h3>
 		<ul class="list-screens">
 			{% for image in section.images %}
-			<li><img src="/assets/images/{{ image }}" alt="" /></li>
+			<li>
+				<img src="/assets/images/{{ image }}" alt="" onclick="openModal(this)" />
+
+				<div class="modal" onclick="openModal(this)">
+					<i class="fas fa-times"></i>
+					<div class="pic-modal" style="background: url(/assets/images/{{image}});"></div>
+				</div>
+			</li>
 			{% endfor %}
 		</ul>
 	</div>
